DELETE stream function
